--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
                 <td>Alemania</td>
                 <td>Amarillo</td>
               </tr>
+              <tr>
+                <td>Docentes</td>
+                <td>A</td>
+                <td>Abeja</td>
+                <td>Amapola</td>
+                <td>Arándano</td>
+                <td>Ajo</td>
+                <td>Alberto</td>
+                <td>Actor</td>
+                <td>Atenas</td>
+                <td>Alemania</td>
+                <td>Amarillo</td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -239,7 +252,7 @@
           <div class="section-heading">
             <h2>Nuestro Equipo</h2>
             <div class="heading-line"></div>
-            <p>Equipo de Docentes</p>
+            <p>group name</p>
           </div>
         </div>
       </div>
@@ -247,15 +260,15 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
             <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Dominique Vroslav</h4>
-            <p>Art Director</p>
+            <h4>qwertyu</h4>
+            <p>+51 123456789</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
           <div class="box-team wow bounceInUp">
             <img src="img/team/2.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Thomas Jeffersonn</h4>
-            <p>Web Designer</p>
+            <h4>Luis Muñoz</h4>
+            <p>+51 997849119</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
