--- a/index.html
+++ b/index.html
@@ -184,17 +184,17 @@
                 <td>Amarillo</td>
               </tr>
               <tr>
-                <td>Docentes</td>
-                <td>A</td>
-                <td>Abeja</td>
+                <td>coders</td>
+                <td>P</td>
+                <td>perico</td>
                 <td>Amapola</td>
-                <td>Arándano</td>
-                <td>Ajo</td>
-                <td>Alberto</td>
-                <td>Actor</td>
-                <td>Atenas</td>
-                <td>Alemania</td>
-                <td>Amarillo</td>
+                <td>pina</td>
+                <td>perejil</td>
+                <td>pablo</td>
+                <td>pintor</td>
+                <td>pueblo libre</td>
+                <td>peru</td>
+                <td>plomo</td>
               </tr>
             </tbody>
           </table>
